# TELLEZ-GUILLENT-PRACTICA-I

./: .gitignore  README.md  Respuestas-Preguntas-Analisis.md  practica_1.py  pyproject.toml  runner.py  services.py
PracticaDos/: Analisis-Opiniones-Transporte-Publico.ipynb  Respuestas-Preguntas-Analisis.md  opiniones.json
PracticaTres/: Clasificacion-Noticias-Colombia.ipynb  Respuesta-Preguntas-Analisis.md
PracticaUno/: Analisis-Mineria-Ilegal.ipynb
data/: mineria_ilegal.csv
