[project]
name = "tellez-guillent-practica-i"
version = "0.1.0"
description = ""
authors = [
    {name = "Carlos Guillent",email = "calor.guillent@correo.tdea.edu.co"},
    {name = "Juan Jose Tellez",email = "juan.tellez@correo.tdea.edu.co"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (==1.26.4)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "notebook (>=7.4.5,<8.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "kagglehub (>=0.3.13,<0.4.0)",
    "transformers (==4.45.0)",
    "datasets (>=4.3.0,<5.0.0)",
    "tf-keras (>=2.20.1,<3.0.0)",
    "jupyterlab (>=4.4.10,<5.0.0)",
    "torch (>=2.9.0,<3.0.0)",
    "accelerate (>=1.11.0,<2.0.0)",
    "evaluate (>=0.4.6,<0.5.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
